﻿IMPROVEMENTS
- General:
	- Add in the remaining localisations for parts.
- AI:
	- Use maxAllowedAoA in post-stall test in FlyToPosition instead of hard-coded 30°.

v1.4.16.1
FIXES
- Fix for tournament.state files with craft filenames containing commas (don't use filenames containing '],['!).
- Fixes issue breaking some guns in v1.4.16.0.
IMPROVEMENTS
- Adds localization for various parts.
- Adds Deployable Missile Rail demo part.

v1.4.16.0
FIXES
- Don't clamp values when switching from text input to sliders and the unclamped option has been toggled.
- Fix wrong component type in BD check.
- Fix rocketpod RoF slider.
- Fix barrage-firing burst-fire weapons; these will now properly ripple again.
- Remove the restriction on the target being ahead of the weapon for opening/closing cargo bays as it messes with missile bays while planes are evading.
- Fix ammo selector issue.
- Fix various NREs.
IMPROVEMENTS
- General:
	- Add Waterfall config for the Saturn engine.
	- Increase the HP of the combat seat to the same as a kerbal (500).
	- Add a time scaling option to the GamePlay section of the settings for speeding up/slowing down the game rate while competitions are active.
		- This does not affect the physics time-step, which remains at 0.02, but simply tries to make the in-game clock go faster with respect to a wall clock, so it should not affect the physics (if they're implemented correctly).
		- WARNING: This is likely to mess with any other mod that adjusts the time rate, e.g., TimeControl, if they're active at the same time.
		- WARNING: Consistency of the results (compared to running at normal speed) is not yet verified, but initial results look promising.
- Internal:
	- Add the script for evaluating the score weights and the old dmg_analysis (for .50cal, 20mm and 30mm ammo) to '_Other Stuff'.
	- Remove executable status of the vessel-trace plotting script.