@@ -351,6 +351,7 @@ Localization
         #LOC_BDArmory_InputSettings_Radar = Radar
         #LOC_BDArmory_InputSettings_VesselSwitcher = Vessel Switcher
         #LOC_BDArmory_InputSettings_Tournament = Tournament
+        #LOC_BDArmory_InputSettings_TimeScaling = Time Scaling
         #LOC_BDArmory_InputSettings_GUI = GUI
         #LOC_BDArmory_InputSettings_BackBtn = Back
         #LOC_BDArmory_InputSettings_recordedInput = Press a key or button.
